[gd_scene load_steps=23 format=3 uid="uid://c3jt0vqwbnm2r"]

[ext_resource type="Script" uid="uid://ngxjk5kwinh" path="res://enemy/enemy.gd" id="1_rovcg"]
[ext_resource type="Texture2D" uid="uid://ccn1rtgq8lb5n" path="res://images/tank-red/down.png" id="2_rovcg"]
[ext_resource type="Texture2D" uid="uid://n5q8jhu0ut2h" path="res://images/tank-red/down-left.png" id="3_n2hyd"]
[ext_resource type="Texture2D" uid="uid://cgjt4r6xd2nr" path="res://images/tank-red/down-right.png" id="4_c6eq3"]
[ext_resource type="Texture2D" uid="uid://mc2y4etyvc6m" path="res://images/tank-red/left.png" id="5_34gv7"]
[ext_resource type="Texture2D" uid="uid://15fudcbwds8b" path="res://images/tank-red/right.png" id="6_pg32h"]
[ext_resource type="Texture2D" uid="uid://cubgkmcly3aja" path="res://images/tank-red/up.png" id="7_nfy00"]
[ext_resource type="Texture2D" uid="uid://cmyn2b2tpqu20" path="res://images/tank-red/up-left.png" id="8_iocd2"]
[ext_resource type="Texture2D" uid="uid://ce2cj8d6f55kw" path="res://images/tank-red/up-right.png" id="9_05kf6"]
[ext_resource type="Texture2D" uid="uid://c5ct2bcy2bb0e" path="res://images/turret-red/down.png" id="10_rovcg"]
[ext_resource type="Texture2D" uid="uid://d08ghcya5vipb" path="res://images/turret-red/down-left.png" id="11_n2hyd"]
[ext_resource type="Texture2D" uid="uid://bq0a8tyyi7unv" path="res://images/turret-red/down-right.png" id="12_c6eq3"]
[ext_resource type="Texture2D" uid="uid://bboautokjg2im" path="res://images/turret-red/left.png" id="13_34gv7"]
[ext_resource type="Texture2D" uid="uid://cag4qiawxrs3w" path="res://images/turret-red/right.png" id="14_pg32h"]
[ext_resource type="Texture2D" uid="uid://dpdm4ho42xxj" path="res://images/turret-red/up.png" id="15_nfy00"]
[ext_resource type="Texture2D" uid="uid://6n7bky2ydn84" path="res://images/turret-red/up-left.png" id="16_iocd2"]
[ext_resource type="Texture2D" uid="uid://dgtjiu1itq5vu" path="res://images/turret-red/up-right.png" id="17_05kf6"]
[ext_resource type="AudioStream" uid="uid://bv416eyoxu45e" path="res://sound/enemy-shoot.wav" id="18_n2hyd"]
[ext_resource type="AudioStream" uid="uid://dh6k4wbyd5dc4" path="res://sound/enemy-hit.wav" id="19_c6eq3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_efrwb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rovcg")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_n2hyd")
}],
"loop": true,
"name": &"down-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c6eq3")
}],
"loop": true,
"name": &"down-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_34gv7")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pg32h")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_nfy00")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_iocd2")
}],
"loop": true,
"name": &"up-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_05kf6")
}],
"loop": true,
"name": &"up-right",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hiqhm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_rovcg")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_n2hyd")
}],
"loop": true,
"name": &"down-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_c6eq3")
}],
"loop": true,
"name": &"down-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_34gv7")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_pg32h")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_nfy00")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_iocd2")
}],
"loop": true,
"name": &"up-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_05kf6")
}],
"loop": true,
"name": &"up-right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1c27"]
size = Vector2(101, 67)

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_rovcg")

[node name="tank" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_efrwb")
animation = &"up-right"

[node name="turret" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_hiqhm")
animation = &"up-right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -3.5)
shape = SubResource("RectangleShape2D_u1c27")

[node name="collideTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="shootTimer" type="Timer" parent="."]

[node name="shootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_n2hyd")

[node name="deathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_c6eq3")

[connection signal="timeout" from="shootTimer" to="." method="_on_shoot_timer_timeout"]
